--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,11 @@
  *= require_tree .
  *= require_self
  */
- h1, h2, h3 {
-     font-family: 'Open Sans', sans-serif;
- }
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+
+h1,
+h2,
+h3 {
+    font-family: 'Open Sans', sans-serif;
+}
