--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,3 +21,11 @@ h2,
 h3 {
     font-family: 'Open Sans', sans-serif;
 }
+.logo {
+  height: 50px;
+  width: auto;
+  padding: 0px;
+}
+.navbar-brand {
+  padding: 0px 15px !important;
+}
