changed callout css

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome from home</h1>
+<div class="home-callout text-center container-fluid">
+    <h1>Welcome to StockHunt</h1>
+    <h3>A community for investors.</h3>
+</div>
