--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,20 +18,21 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="/" class="navbar-brand"><span><%= image_tag "bull-head.svg", :class => "logo" %></span>Stock Hunt</a>
-                </div>
-                <div class="collapse navbar-collapse" id="main-nav-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="/about">About</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
+                    <%= link_to "/", class: "navbar-brand" do %>
+                    <span><%= image_tag "bull-head.svg", :class => "logo" %></span>Stock Hunt</a>
+                <% end %>
+
             </div>
-        </nav>
+            <div class="collapse navbar-collapse" id="main-nav-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><%= link_to "About", "/about" %></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+    </nav>
 
-            <%= yield %>
+    <%= yield %>
 
-    </body>
+</body>
 </html>
