--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,8 @@ h3 {
 
 .navbar-brand {
     padding: 0 15px !important;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
 }
 
 .home-callout {
