--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
-<h1>About Page</h1>
+<div class="container text-center">
+  <h1>About Page</h1>
+  <p>We are StockHunt. Our mission is to connect investors to great investment options.</p>
+</div>
