Added sign up links to home page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,6 +56,11 @@ h3 {
 .navbar {
     border: none;
 }
+
 .alert-notice {
-  display: none;
+    display: none;
+}
+
+.home-signup-links {
+    margin-top: 30px;
 }
