--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Saasapp</title>
+        <title>Trading Community</title>
         <%= csrf_meta_tags %>
         <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
         <%= javascript_include_tag "https://js.stripe.com/v2/", type: 'text/javascript' %>
-        <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+        <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
     </head>
 
     <body>
