Updated flash message styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,11 @@
             <!-- /.navbar-collapse -->
         </div>
     </nav>
-
+<div class="container flash-container">
+  <% flash.each do |type, msg| %>
+  <%= content_tag :div , msg, class: "alert-alert-#{type}"%>
+  <% end %>
+</div>
     <%= yield %>
 
 </body>
