--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,11 +41,11 @@
             <!-- /.navbar-collapse -->
         </div>
     </nav>
-<div class="container flash-container">
+<!-- <div class="container flash-container">
   <% flash.each do |type, msg| %>
   <%= content_tag :div , msg, class: "alert-alert-#{type}"%>
   <% end %>
-</div>
+</div> -->
     <%= yield %>
 
 </body>
