--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,19 @@
-<%= image_tag @user.profile.avatar.url %>
-<%= @user.profile.first_name %> <%= @user.profile.last_name %>
-<% if current_user.plan_id == 2 %>
-  <%= @user.profile.contact_email %>
-<% end %>
-<%= @user.profile.description %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3 text-center">
+            <%= image_tag @user.profile.avatar.url, class: 'avatar-show-img' %></div>
+        <div class="col-md-6">
+            <h1><%= @user.profile.first_name %>
+                <%= @user.profile.last_name %></h1>
+            <div class="well profile-block profile-description">
+              <h3>Description</h3>
+              <%= @user.profile.description %></div>
+            <% if true #current_user.plan_id == 2 %>
+            <div class="well profile-block profile-contact-info">
+              <h3>Contact</h3>
+                <%= @user.profile.contact_email %>
+            </div>
+            <% end %>
+        </div>
+    </div>
+</div>
