--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,25 @@
 </div>
 <div class="container home-signup-links">
     <div class="row">
+        <% if user_signed_in? %>
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center">Your Profile</h2>
+                <% if current_user.profile %>
+                <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block' %>
+                <%= link_to "View your profile", user_path(id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
+            <% else %>
+                <%= link_to "Create your profile", new_user_profile_path(user_id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
+                <% end %>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center">The Community</h2>
+                <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block'%>
+            </div>
+        </div>
+    <% else %>
         <div class="col-md-6">
             <div class="well">
                 <h2 class="text-center">Basic Membership</h2>
@@ -20,6 +39,6 @@
                 <%= link_to "Sign Up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-primary btn-lg btn-block' %>
             </div>
         </div>
+        <% end %>
     </div>
-    <%= link_to "Create your profile!", new_user_profile_path(user_id: current_user.id) if user_signed_in? %>
 </div>
