added users index view

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -19,3 +19,11 @@
   background-color: #5bc0de;
   border-color: #46b8da;
 }
+.user-index-avatar {
+  width: 128px;
+  height: 128px;
+  border-radius: 50%;
+}
+.white-bg {
+  background-color: #fff;
+}
