added nav links

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,6 +18,10 @@
                                 <%= user.profile.last_name %>
                               </h2>
                               <% end %>
+                                <!-- <p><% if user.plan_id == 2%>
+                                  <<span class="label label-danger">Pro</span>
+                                  <% end %>
+                              </p> -->
                         </div>
                     </div>
                 </li>
